fixed button overflow on settings page, font color is now black, and buttons are now the same color

--- a/public/css/home-dark.css
+++ b/public/css/home-dark.css
@@ -52,6 +52,8 @@
     list-style-type: none;
     position: relative;
     align-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .home-board
@@ -130,6 +132,29 @@
     box-shadow: inset 0 0 100px 0 darkorange;
     color: black;
 
+}
+
+@media only screen and (max-width: 1536px) 
+{
+    .home-create-board-button
+{
+    width:20vw;
+    height:5vw;
+    position: relative;
+    left: 40%;
+    margin:auto;
+    font-size: large;
+    align-self: center;
+    color: black;
+    transition: ease-out 0.15s;
+}
+    .home-create-board-button:hover
+    {
+        font-size: medium;
+        box-shadow: inset 0 0 100px 0 darkorange;
+        color: black;
+
+    }
 }
 
 .home-board label
